WindGroup Dev/src/objects/ServiceContract.object
<CustomObject>
    <fields>
        <fullName>Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist</label>
        <referenceTo>Checklist__c</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>Service_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Fortnightly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Bimonthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semiannually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Start_Date__c</fullName>
        <label>Request Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cleaning</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_ServiceContracts</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>CONTRACT.APPROVALSTATUS</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Contracts</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Check_Request_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Request_Start_Date__c &lt; StartDate</errorConditionFormula>
        <errorMessage>Request Start Date must be after Service Contract Start Date</errorMessage>
    </validationRules>
</CustomObject>